# profile.ivi.smartdevicelink

./: .gbs.conf  .gitignore  CMakeLists.txt  LICENSE  README.md
SDL_Core/: CMakeLists.txt
SDL_Core/src/appMain/: appMain.cpp
SDL_Core/src/components/AppMgr/src/: AppMgrCore.cpp
cmake/Modules/: FindGstreamer-1.0.cmake
packaging/: config.xml  config.xml.in  manifest.json  manifest.json.in  smartdevicelink.changes  smartdevicelink.manifest  smartdevicelink.spec  smartdevicelink.xml
src/appMain/: CMakeLists.txt  life_cycle.cc  life_cycle.h  main.cc  sdl_preloaded_pt.json  smartDeviceLink.ini
src/components/: CMakeLists.txt
src/components/HMI/app/controller/: SettingsController.js
src/components/HMI/app/controller/sdl/: AppController.js  Controller.js
src/components/HMI/app/model/sdl/: Model.js
src/components/HMI/app/view/sdl/: VRHelpListView.js
src/components/HMI/app/view/sdl/shared/: interactionChoicesView.js  keyboard.js
src/components/HMI/css/: general.css
src/components/HMI/ffw/: BasicCommunicationRPC.js  UIRPC.js
src/components/application_manager/: CMakeLists.txt
src/components/application_manager/include/application_manager/: application_impl.h  application_manager_impl.h  message_helper.h  resume_ctrl.h  smart_object_keys.h
src/components/application_manager/include/application_manager/commands/mobile/: perform_interaction_request.h
src/components/application_manager/include/application_manager/policies/: policy_handler.h
src/components/application_manager/src/: application_manager_impl.cc  hmi_command_factory.cc  message_helper.cc  resume_ctrl.cpp
src/components/application_manager/src/commands/mobile/: perform_interaction_request.cc  reset_global_properties_request.cc
src/components/config_profile/: CMakeLists.txt
src/components/config_profile/include/config_profile/: profile.h
src/components/config_profile/src/: profile.cc
src/components/connection_handler/: CMakeLists.txt
src/components/connection_handler/include/connection_handler/: connection_handler_impl.h
src/components/connection_handler/src/: connection_handler_impl.cc
src/components/dbus/: CMakeLists.txt
src/components/formatters/: CMakeLists.txt
src/components/hmi_message_handler/: CMakeLists.txt
src/components/hmi_message_handler/src/: hmi_message_handler_impl.cc  messagebroker_adapter.cc
src/components/interfaces/: CMakeLists.txt  MOBILE_API.xml
src/components/media_manager/: CMakeLists.txt
src/components/media_manager/src/: socket_streamer_adapter.cc
src/components/media_manager/src/audio/: audio_stream_sender_thread.cc
src/components/policies/: CMakeLists.txt
src/components/policy/src/policy/: CMakeLists.txt  policy_table_interface.xml  policy_table_interface_ext.xml
src/components/policy/src/policy/include/policy/: policy_helper.h  policy_listener.h  policy_manager.h  policy_manager_impl.h  policy_table.h  policy_types.h  pt_ext_representation.h  pt_representation.h  sql_pt_ext_queries.h  sql_pt_ext_representation.h  sql_pt_queries.h  sql_pt_representation.h  syncp_adapter.h
src/components/policy/src/policy/qdb_wrapper/include/qdb_wrapper/: sql_query.h
src/components/policy/src/policy/qdb_wrapper/src/: sql_query.cc
src/components/policy/src/policy/sqlite_wrapper/: CMakeLists.txt
src/components/policy/src/policy/sqlite_wrapper/include/sqlite_wrapper/: sql_database.h
src/components/policy/src/policy/sqlite_wrapper/src/: sql_database.cc
src/components/policy/src/policy/src/: policy_helper.cc  policy_manager_impl.cc  policy_table.cc  sql_pt_ext_queries.cc  sql_pt_ext_representation.cc  sql_pt_queries.cc  sql_pt_representation.cc  syncp_adapter.cc
src/components/policy/test/policy/: CMakeLists.txt
src/components/policy/test/policy/include/: generated_code_with_sqlite_test.h  mock_policy_listener.h  mock_pt_ext_representation.h  mock_pt_representation.h
src/components/policy/test/policy/sqlite_wrapper/: CMakeLists.txt
src/components/policy/test/policy/src/: generated_code_test.cc  test_policy_manager_impl.cc  test_sql_pt_ext_representation.cc  test_sql_pt_representation.cc  test_stress_policy_manager_impl.cc
src/components/protocol_handler/: CMakeLists.txt
src/components/protocol_handler/src/: protocol_payload.cc
src/components/request_watchdog/: CMakeLists.txt
src/components/resumption/: CMakeLists.txt
src/components/smart_objects/: CMakeLists.txt
src/components/time_tester/: CMakeLists.txt
src/components/transport_manager/: CMakeLists.txt
src/components/transport_manager/include/transport_manager/tcp/: tcp_client_listener.h
src/components/transport_manager/src/tcp/: tcp_transport_adapter.cc
src/components/utils/: CMakeLists.txt
src/components/utils/include/utils/: file_system.h
src/components/utils/src/: bitstream.cc  file_system.cc
src/components/utils/src/threads/: posix_thread.cc
src/thirdPartyLibs/: CMakeLists.txt
src/thirdPartyLibs/MessageBroker/: CMakeLists.txt
src/thirdPartyLibs/encryption/: CMakeLists.txt
src/thirdPartyLibs/jsoncpp/: CMakeLists.txt
src/thirdPartyLibs/libusbx-1.0.16/: CMakeLists.txt
test/: CMakeLists.txt  test_suit.cc
test/components/: CMakeLists.txt
test/components/application_manager/: CMakeLists.txt
test/components/application_manager/rpc/: CMakeLists.txt
test/components/transport_manager/src/: test_tcp_transport_adapter.cc
test/components/utils/: CMakeLists.txt
tools/InterfaceGenerator/generator/generators/: SmartFactoryBase.py
